# xgt

./: .clang-format  .gitignore  .vimrc  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Doxyfile  LICENSE.md  README.md  Rakefile  steemit.txt  temp.txt  todo.rb
libraries/chain/: CMakeLists.txt  block_log.cpp  database.cpp  fork_database.cpp  generic_custom_operation_interpreter.cpp  index.cpp  index_init1.cpp  index_init2.cpp  index_init3.cpp  keccak.c  machine.cpp  optional_action_evaluator.cpp  required_action_evaluator.cpp  shared_authority.cpp  xgt_evaluator.cpp  xgt_objects.cpp  xtt_evaluator.cpp
libraries/chain/include/: attributes.h  hash_types.h  keccak.h
libraries/chain/include/rlpvalue/: a.out  main.cpp
libraries/chain/include/rlpvalue/lib/: rlpvalue_get.cpp  rlpvalue_write.cpp
libraries/chain/include/xgt/chain/: block_log.hpp  block_summary_object.hpp  buffer_type.hpp  comment_object.hpp  contract_objects.hpp  custom_operation_interpreter.hpp  database.hpp  database_exceptions.hpp  db_with.hpp  evaluator.hpp  evaluator_registry.hpp  fork_database.hpp  generic_custom_operation_interpreter.hpp  global_property_object.hpp  history_object.hpp  (+22 more)
libraries/chain/util/: advanced_benchmark_dumper.cpp  impacted.cpp  rd.cpp  xtt_token.cpp
libraries/chain/xtt_objects/: nai_pool.cpp
libraries/chainbase/: CMakeLists.txt  README.md
libraries/chainbase/include/chainbase/: allocators.hpp  chainbase.hpp
libraries/chainbase/src/: chainbase.cpp
libraries/chainbase/test/: CMakeLists.txt  test.cpp
libraries/fc/: CMakeLists.txt
libraries/fc/include/fc/: container.hpp  filesystem.hpp  optional.hpp  platform_independence.hpp  signal.hpp  string.hpp  utf8.hpp  variant.hpp  variant_object.hpp  vector_fwd.hpp
libraries/fc/src/: asio.cpp  filesystem.cpp  stacktrace.cpp  string.cpp  variant.cpp
libraries/fc/src/compress/: miniz.c
libraries/fc/src/crypto/: aes.cpp  openssl.cpp  ripemd160.cpp
libraries/fc/src/interprocess/: file_mutex.cpp
libraries/fc/src/io/: iostream.cpp  json.cpp
libraries/fc/src/log/: appender.cpp  console_appender.cpp
libraries/fc/src/network/: tcp_socket.cpp
libraries/fc/src/thread/: thread.cpp  thread_d.hpp
libraries/fc/tests/: CMakeLists.txt  all_tests.cpp
libraries/fc/tests/crypto/: aes_test.cpp  base_n_tests.cpp  ecc_test.cpp  ecdsa_canon_test.cpp  sha_tests.cpp
libraries/fc/tests/thread/: task_cancel.cpp
libraries/mira/: CMakeLists.txt
libraries/mira/include/mira/: index_adapter.hpp  mira.hpp  multi_index_container.hpp  multi_index_container_fwd.hpp
libraries/mira/test/: CMakeLists.txt  test.cpp  test_objects.hpp
libraries/plugins/apis/block_api/: CMakeLists.txt  block_api.cpp  block_api_plugin.cpp
libraries/plugins/apis/chain_api/: CMakeLists.txt  chain_api.cpp  chain_api_plugin.cpp
libraries/plugins/apis/contract_api/: CMakeLists.txt  contract_api.cpp  contract_api_plugin.cpp  plugin.json
libraries/plugins/apis/database_api/: CMakeLists.txt  database_api.cpp  database_api_plugin.cpp
libraries/plugins/apis/machine_api/: CMakeLists.txt  machine_api.cpp  machine_api_plugin.cpp  plugin.json
libraries/plugins/apis/test_api/: CMakeLists.txt  test_api_plugin.cpp
libraries/plugins/apis/transaction_api/: CMakeLists.txt  plugin.json  transaction_api.cpp  transaction_api_plugin.cpp
libraries/plugins/apis/wallet_by_key_api/: CMakeLists.txt  plugin.json  wallet_by_key_api.cpp  wallet_by_key_api_plugin.cpp
libraries/plugins/apis/wallet_history_api/: CMakeLists.txt  plugin.json  wallet_history_api.cpp  wallet_history_api_plugin.cpp
libraries/plugins/chain/: CMakeLists.txt  chain_plugin.cpp
libraries/plugins/chain/statefile/: load_state.cpp  save_state.cpp  statefile.cpp
libraries/plugins/transaction_status/: CMakeLists.txt  transaction_status_plugin.cpp
libraries/plugins/wallet_by_key/: CMakeLists.txt  plugin.json  wallet_by_key_plugin.cpp
libraries/plugins/wallet_history/: CMakeLists.txt  plugin.json  wallet_history.cpp  wallet_history_plugin.cpp
libraries/plugins/wallet_history_rocksdb/: CMakeLists.txt  plugin.json  wallet_history_rocksdb_plugin.cpp
libraries/plugins/webserver/: CMakeLists.txt  webserver_plugin.cpp
libraries/plugins/witness/: CMakeLists.txt  block_producer.cpp  witness_plugin.cpp
libraries/protocol/: CMakeLists.txt  asset.cpp  authority.cpp  block.cpp  get_config.cpp  operations.cpp  schema_types.cpp  sign_state.cpp  transaction.cpp  types.cpp  version.cpp  xgt_operations.cpp  xgt_optional_actions.cpp  xgt_required_actions.cpp  xtt_operations.cpp  xtt_util.cpp
libraries/protocol/hardfork.d/: 0-preamble.hf
libraries/schema/: CMakeLists.txt  schema.cpp
libraries/time/: CMakeLists.txt
libraries/utilities/: CMakeLists.txt  benchmark_dumper.cpp  database_configuration.cpp  git_revision.cpp.in  key_conversion.cpp  logging_config.cpp  string_escape.cpp  tempdir.cpp
programs/util/: CMakeLists.txt  dump_xgt_schema.cpp  get_dev_key.cpp  inflation_model.cpp  inflation_plot.py  newplugin.py  object_size.py  rocksdb_advisor.sh  schema_test.cpp  serialize_set_properties.cpp  sign_digest.cpp  sign_transaction.cpp  test_block_log.cpp  test_fixed_string.cpp  test_shared_mem.cpp
programs/xgtd/: CMakeLists.txt  main.cpp
tests/: BoostTestTargets.cmake  CMakeLists.txt  README.md
tests/api_tests/: jsonsocket.py  list_account.py  list_comment.py  test_ah_get_account_history.py  test_ah_get_ops_in_block.py  test_list_votes.py  test_list_votes2.py
tests/bmic_objects/: CMakeLists.txt
tests/db_fixture/: CMakeLists.txt  database_fixture.cpp  database_fixture.hpp
tests/generate_empty_blocks/: CMakeLists.txt
tests/plugin_tests/: json_rpc.cpp  main.cpp  plugin_ops.cpp  rc_delegation.cpp  transaction_status.cpp
tests/scripts/: api_error_smoketest.py  create_account_list.py  test_ah_get_ops_in_block.sh
tests/tests/: automated_action_tests.cpp  basic_tests.cpp  block_tests.cpp  bmic_tests.cpp  main.cpp  operation_tests.cpp  operation_time_tests.cpp  serialization_tests.cpp  undo_tests.cpp  xtt_operation_test.cpp  xtt_operation_time_tests.cpp  xtt_tests.cpp
tests/undo_data/: undo.hpp
(+177 files in other folders)
